# raytracer

./: .common.h.swp  .gitignore  .main.cpp.swp  .ray.h.swp  .raytracer.cpp.swp  .raytracer.h.swp  .scene.cpp.swp  .scene.h.swp  1 copy 2.ppm  1 copy 3.ppm  1 copy 4.ppm  1.ppm  CMakeLists.txt  README.md  common.h  main  main.cpp  makefile  material.h  primitive.cpp  primitive.h  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h
scene/: bezier.txt  scene copy.txt  scene.txt
src/accelerator/: bfaccel.cpp  bfaccel.h  kdtreeaccel.cpp  kdtreeaccel.h
src/core/: api.cpp  api.h  camera.cpp  camera.h  common.h  engine.cpp  engine.h  geometry.cpp  geometry.h  intersection.cpp  intersection.h  light.cpp  light.h  material.h  primitive.cpp  primitive.h  raytracer.h  scene.cpp  scene.h  shape.cpp  shape.h  texture.h  transform.cpp  transform.h
src/engine/: pm.cpp  pm.h  ppm.cpp  ppm.h  rt.cpp  rt.h
src/main/: main.cpp
src/shape/: .sphere.cpp.swp  .sphere.h.swp  bezier.cpp  bezier.h  box.cpp  box.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
texture/: floor.pic
